<resources>
    <string name="app_name">CookHome</string>
    <string name="cocina">Cocina</string>
    <string name="sign_up"><b>Sign Up</b></string>
    <string name="hi">Hi there!Nice to see you again</string>
    <string name="mail">email</string>
    <string name="email_hint">Enter email</string>
    <color name="text_color">#000000</color>
    <string name="Enter_password">Enter password</string>
    <string name="ingresar">Sign Up</string>
    <string name="Hello">HELLO WOLRD</string>
    <string name="menu">Menú</string>
    <string name="preparacion">Preparación</string>
    <string name="flecha_iz_description">Descripción de la flecha hacia la izquierda</string>
    <string name="pollo_sal_description">Descripción de la imagen de pollo salteado</string>
    <string name="tus_recetas">Tus Recetas</string>
    <string name="names">Alicia,Kendal</string>
    <string name="pollo_salteado">Pollo salteado</string>
    <string name="carne_horno_vino">Carne en horno al vino</string>
    <string name="add_icon_description">Description of the add icon</string>
    <string name="icon_description">Description of the add icon</string>



</resources>